# daydream-obs

./: CMakeLists.txt  README.md  buildspec.json
.github/actions/build-plugin/: action.yaml
.github/scripts/: .Aptfile
cmake/: FindFFmpeg.cmake
data/: gaussian_blur.effect  nv12_to_rgb.effect
src/: daydream-api.c  daydream-api.h  daydream-auth.c  daydream-auth.h  daydream-decoder.c  daydream-decoder.h  daydream-encoder.c  daydream-encoder.h  daydream-filter.c  daydream-filter.h  daydream-source.c  daydream-source.h  daydream-whep.cpp  daydream-whep.h  daydream-whip.cpp  daydream-whip.h  jitter-estimator.c  jitter-estimator.h  plugin-main.c  timestamp-extrapolator.c  timestamp-extrapolator.h
